# rtimulib_ros

./: CMakeLists.txt
config/: MPU9255.ini  RTIMULib.ini.old
launch/: mpu9255_ros.launch
src/: mpu9255_compass_ros.cpp  mpu9255_imu_ros.cpp  mpu9255_ros.cpp  rtimulib_imu_mag.cpp
